// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,56,58,103,54,61,62,85,86,101
]
Bi
/* Bi */
g Apple$8r
/* Br */
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
Ne
/* Ne */
w York$7u
/* Nu */
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6<r
/* ar */
row \\\\<$7
bi
/* bi */
g a#5<4u
/* bu */
rned$r$2ing$3s$$4
ch
/* ch */
alk@2<3u@5<3
eo
/* eo */
l \\\\\\\\n$3w \\\\$$4s
/* es */
cape \\\\\\\\\\\\$8
fu
/* fu */
n journey$7wal@1<7
jo
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4
ness$4$3lessn#120<$4ou#125<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
li
/* li */
ft@2<3o
/* lo */
ng w@9<6
re
/* re */
f \\\\#$5
t@6<
wa@7<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,56,58,103,54,61,62,85,86,101
]
Bi
/* Bi */
g Apple$8r
/* Br */
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
Ne
/* Ne */
w York$7u
/* Nu */
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6<r
/* ar */
row \\\\<$7
bi
/* bi */
g a#5<4u
/* bu */
rned$r$2ing$3s$$4
ch
/* ch */
alk@2<3u@5<3
eo
/* eo */
l \\\\\\\\n$3w \\\\$$4s
/* es */
cape \\\\\\\\\\\\$8
fu
/* fu */
n journey$7wal@1<7
jo
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4
ness$4$3lessn#120<$4ou#125<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
li
/* li */
ft@2<3o
/* lo */
ng w@9<6
re
/* re */
f \\\\#$5
t@6<
wa@7<2
"
`;

exports[`Import/Export serialize DAWG {"base": 10} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,56,58,103,54,61,62,85,86,101
]
Bi
/* Bi */
g Apple$8r
/* Br */
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
Ne
/* Ne */
w York$7u
/* Nu */
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6<r
/* ar */
row \\\\<$7
bi
/* bi */
g a#5<4u
/* bu */
rned$r$2ing$3s$$4
ch
/* ch */
alk@2<3u@5<3
eo
/* eo */
l \\\\\\\\n$3w \\\\$$4s
/* es */
cape \\\\\\\\\\\\$8
fu
/* fu */
n journey$7wal@1<7
jo
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4
ness$4$3lessn#120<$4ou#125<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
li
/* li */
ft@2<3o
/* lo */
ng w@9<6
re
/* re */
f \\\\#$5
t@6<
wa@7<2
"
`;

exports[`Import/Export serialize DAWG 10 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv4
base=10
# 
# Data:
__DATA__
[
0,27,56,58,103,54,61,62,85,86,101
]
Bi
/* Bi */
g Apple$8r
/* Br */
aces\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
Ne
/* Ne */
w York$7u
/* Nu */
mbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6<r
/* ar */
row \\\\<$7
bi
/* bi */
g a#5<4u
/* bu */
rned$r$2ing$3s$$4
ch
/* ch */
alk@2<3u@5<3
eo
/* eo */
l \\\\\\\\n$3w \\\\$$4s
/* es */
cape \\\\\\\\\\\\$8
fu
/* fu */
n journey$7wal@1<7
jo
/* jo */
urnalism$tic$2$3s$$2eyer$2man$2e@4<2$4ste@10<i@3<$3vialit@8<2$4wly$$2yfuller$st$4
ness$4$3lessn#120<$4ou#125<2ridde@4<2er$$i@3<3od#8<3stic@1<4$3
li
/* li */
ft@2<3o
/* lo */
ng w@9<6
re
/* re */
f \\\\#$5
t@6<
wa@7<2
"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 10, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#56;<3u#54;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3
stic#27;<4$3
lift#56;<3ong w#86;<6
ref \\\\#$5
t#61;<
wa#62;<2

"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 10, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#56;<3u#54;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7walk$8
journalism$tic$2$3s$$2eyer$2man$2en$3$4ster$2i#58;<$3viality$3$4wly$$2yfuller$st$4ness$4$3lessn#124;<$4ou#129;<2ridden$3er$$i#58;<3ode$4
stick$5$3
lift#56;<3ong w#86;<6
ref \\\\#$5
t#61;<
wa#62;<2

"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 10} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#56;<3u#54;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3
stic#27;<4$3
lift#56;<3ong w#86;<6
ref \\\\#$5
t#61;<
wa#62;<2

"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 16, "optimizeSimpleReferences": false} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#38;<3u#36;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#1b;<7
journalism$tic$2$3s$$2eyer$2man$2e#67;<2$4ste#65;<i#3a;<$3vialit#55;<2$4wly$$2yfuller$st$4ness$4$3lessn#78;<$4ou#7d;<2ridde#67;<2er$$i#3a;<3od#8;<3
stic#1b;<4$3
lift#38;<3ong w#56;<6
ref \\\\#$5
t#3d;<
wa#3e;<2

"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 16, "optimizeSimpleReferences": true} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#38;<3u#36;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7walk$8
journalism$tic$2$3s$$2eyer$2man$2en$3$4ster$2i#3a;<$3viality$3$4wly$$2yfuller$st$4ness$4$3lessn#7c;<$4ou#81;<2ridden$3er$$i#3a;<3ode$4
stick$5$3
lift#38;<3ong w#56;<6
ref \\\\#$5
t#3d;<
wa#3e;<2

"
`;

exports[`Import/Export serialize with V3 DAWG {"base": 16} 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#38;<3u#36;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#1b;<7
journalism$tic$2$3s$$2eyer$2man$2e#67;<2$4ste#65;<i#3a;<$3vialit#55;<2$4wly$$2yfuller$st$4ness$4$3lessn#78;<$4ou#7d;<2ridde#67;<2er$$i#3a;<3od#8;<3
stic#1b;<4$3
lift#38;<3ong w#56;<6
ref \\\\#$5
t#3d;<
wa#3e;<2

"
`;

exports[`Import/Export serialize with V3 DAWG 10 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=10
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#56;<3u#54;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#27;<7
journalism$tic$2$3s$$2eyer$2man$2e#103;<2$4ste#101;<i#58;<$3vialit#85;<2$4wly$$2yfuller$st$4ness$4$3lessn#120;<$4ou#125;<2ridde#103;<2er$$i#58;<3od#8;<3
stic#27;<4$3
lift#56;<3ong w#86;<6
ref \\\\#$5
t#61;<
wa#62;<2

"
`;

exports[`Import/Export serialize with V3 DAWG 16 1`] = `
"#!/usr/bin/env cspell-trie reader
TrieXv3
base=16
# Data:
__DATA__
Big Apple$8races\\\\: \\\\{\\\\}\\\\[\\\\]\\\\(\\\\)$9<5
New York$7umbers \\\\0\\\\1\\\\2\\\\3\\\\4\\\\5\\\\6\\\\7\\\\8\\\\9$9<9
ap#6;<rrow \\\\<$7
big a#5;<4urned$r$2ing$3s$$4
chalk#38;<3u#36;<3
eol \\\\\\\\n$3w \\\\$$4scape \\\\\\\\\\\\$8

fun journey$7wal#1b;<7
journalism$tic$2$3s$$2eyer$2man$2e#67;<2$4ste#65;<i#3a;<$3vialit#55;<2$4wly$$2yfuller$st$4ness$4$3lessn#78;<$4ou#7d;<2ridde#67;<2er$$i#3a;<3od#8;<3
stic#1b;<4$3
lift#38;<3ong w#56;<6
ref \\\\#$5
t#3d;<
wa#3e;<2

"
`;
